[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/text/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/labelPiece.gd" type="Script" id=2]
[ext_resource path="res://assets/lineEditStyle/labelPiece.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/buttonsStyle/normal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/buttonsStyle/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/buttonsStyle/hover.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/buttonsStyle/diabled.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="labelPiece" type="HBoxContainer"]
margin_right = 600.0
margin_bottom = 34.0
rect_min_size = Vector2( 600, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userInfo" type="LineEdit" parent="."]
margin_right = 440.0
margin_bottom = 34.0
rect_min_size = Vector2( 440, 32 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/selection_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_colors/cursor_color = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color_selected = Color( 0.0352941, 0.117647, 0.87451, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Put property here"
caret_blink = true
caret_blink_speed = 0.25

[node name="value" type="LineEdit" parent="."]
margin_left = 444.0
margin_right = 508.0
margin_bottom = 34.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 4
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/selection_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_colors/cursor_color = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color_selected = Color( 0.0352941, 0.117647, 0.87451, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
caret_blink = true
caret_blink_speed = 0.25

[node name="delButton" type="Button" parent="."]
margin_left = 512.0
margin_right = 576.0
margin_bottom = 34.0
rect_min_size = Vector2( 64, 32 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "del"
[connection signal="tree_exiting" from="." to="." method="_on_labelPiece_tree_exiting"]
[connection signal="text_changed" from="userInfo" to="." method="_on_userInfo_text_changed"]
[connection signal="text_changed" from="value" to="." method="_on_value_text_changed"]
[connection signal="pressed" from="delButton" to="." method="_on_delButton_pressed"]
